Bug 891904 - Un-schedule full spell check when checker is disabled. r=ehsan, a=akeybl