extensions/spellcheck/src/mozInlineSpellChecker.cpp
@@ -626,6 +626,7 @@ nsresult mozInlineSpellChecker::Cleanup(bool aDestroyingFrames)
   }
 
   mEditor = nullptr;
+  mFullSpellCheckScheduled = false;
 
   return rv;
 }
